--- a/src/index.css
+++ b/src/index.css
@@ -3,30 +3,27 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  background-color: #f8f9fa;
   margin: 0;
+  padding: 0;
+  color: #212529;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #343a40;
+  margin-bottom: 20px;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 button {
